<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_iconIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_icon" />
        />

        <TextView
            android:id="@+id/signInTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        />


    </LinearLayout>

    <TextView
        android:id="@+id/authenticationHintTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="40dp"
        android:text="@string/authenticationHintTv"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/usernameTv"
        style="@style/authenticationScreenTextView"
        android:layout_below="@+id/authenticationHintTv"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernameEt"
        style="@style/authenticationScreenEditText"
        android:background="@drawable/awesome_et"
        android:layout_below="@+id/usernameTv"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/passwordTv"
        android:text="@string/password"
        style="@style/authenticationScreenTextView"
        android:layout_below="@+id/usernameEt" />

    <EditText
        android:id="@+id/passwordEt"
        style="@style/authenticationScreenEditText"
        android:layout_below="@+id/passwordTv"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/authenticationBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordEt"
        android:layout_marginTop="15dp"
        style="@style/awesome_green_button"
        android:onClick="authenticationButtonListener"
        android:text="@string/sign_in" />


</RelativeLayout>
